9 - Ultima versión Setiembre 2017

--- a/src/main/java/edu/bullyingmestrado/swing/EvaluationTextsFrame.form
+++ b/src/main/java/edu/bullyingmestrado/swing/EvaluationTextsFrame.form
@@ -95,10 +95,17 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblTitle" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblSubtitle" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="lblSubtitle" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <Component id="lblTitle" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
+                                      <Component id="lblTimer" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="242" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
                               <Component id="imgLogoClass21" min="-2" pref="92" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="177" max="-2" attributes="0"/>
                           </Group>
@@ -111,7 +118,7 @@
                                   <Component id="lblMessagesResults" min="-2" max="-2" attributes="0"/>
                                   <Component id="jScrollPane1" min="-2" pref="1064" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="16" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -130,7 +137,10 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="lblTitle" min="-2" pref="34" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
+                                  <Component id="lblTitle" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                                  <Component id="lblTimer" alignment="3" min="-2" max="-2" attributes="0"/>
+                              </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="lblSubtitle" min="-2" max="-2" attributes="0"/>
                           </Group>
@@ -335,6 +345,11 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExportCSVActionPerformed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JLabel" name="lblTimer">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="TIMER"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
